some warnings were fixed